--- a/index.html
+++ b/index.html
@@ -2,10 +2,102 @@
 <html lang="it" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/styles.css">
-    <title>Struttura</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Struttura Wordpress</title>
   </head>
   <body>
+
+    <div class="container">
+
+      <header>
+        <h1>titolo</h1>
+      </header>
+
+      <nav>
+        <ul>
+          <li class="menu">home</li>
+          <li class="menu">about</li>
+          <li class="menu">page template</li>
+          <li class="menu">a parent page</li>
+          <li class="menu">features</li>
+          <li class="menu">blog</li>
+          <li class="menu" id="contact">contact</li>
+        </ul>
+      </nav>
+
+      <main>
+
+        <div class="row-l left">
+
+          <div class="col-l">
+            <i></i>
+            <h2>Organic Themes</h2>
+            <div class="link">
+              <a href="#">Link 1</a>
+            </div>
+            <div class="link">
+              <a href="#">Link 2</a>
+            </div>
+            <div class="link">
+              <a href="#">Link 3</a>
+            </div>
+            <div class="link">
+              <a href="#">Link 4</a>
+            </div>
+            <div class="link">
+              <a href="#">Link 5</a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row-c left">
+
+          <div class="col-c top">
+            <h2>Three Column</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+
+        </div>
+
+        <div class="row-r right">
+
+          <div class="col-r">
+            <h3>Text Widget</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut quae odit molestiae porro at harum praesentium iure vitae incidunt quaerat?</p>
+          </div>
+
+          <div class="col-r">
+            <h3>Text Widget</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, odio quidem maxime. Ratione tenetur, totam deserunt ea atque similique iusto?</p>
+          </div>
+
+          <div class="col-r">
+            <h3>Text Widget</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo itaque culpa hic nihil qui possimus corporis provident. Eius, repudiandae, animi?</p>
+          </div>
+
+        </div>
+
+      </main>
+
+      <footer>
+
+        <div class="footer">
+          <div class="credits">
+            <h5>Pagina realizzata da Raffaele Baldassarre</h5>
+            <hr>
+          </div>
+
+          <div class="link-social">
+            <i></i>
+            <i></i>
+            <i></i>
+          </div>
+        </div>
+
+      </footer>
+    </div>
 
   </body>
 </html>
