--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
 
       <header>
-        <h1>titolo</h1>
+        <img class="logo" src="img/natural-logo.png" alt="logo natural">
       </header>
 
       <nav>
@@ -53,7 +53,7 @@
 
         <div class="row-c left">
 
-          <div class="col-c top">
+          <div class="col-c">
             <h2>Three Column</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
@@ -62,12 +62,12 @@
 
         <div class="row-r right">
 
-          <div class="col-r">
+          <div class="col-r" id="top">
             <h3>Text Widget</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut quae odit molestiae porro at harum praesentium iure vitae incidunt quaerat?</p>
           </div>
 
-          <div class="col-r">
+          <div class="col-r" id="middle">
             <h3>Text Widget</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, odio quidem maxime. Ratione tenetur, totam deserunt ea atque similique iusto?</p>
           </div>
@@ -90,9 +90,9 @@
           </div>
 
           <div class="link-social">
-            <i></i>
-            <i></i>
-            <i></i>
+            <span>Facebook</span>
+            <span>Instagram</span>
+            <span>GitHub</span>
           </div>
         </div>
 
