--- a/index.html
+++ b/index.html
@@ -2,101 +2,65 @@
 <html lang="it" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <title>WP Struttura</title>
     <link rel="stylesheet" href="css/styles.css">
-    <title>Struttura Wordpress</title>
   </head>
   <body>
+    <div id="container">
+      <!-- testata sito -->
+      <header class="mt-20">
+        <div class="header-top">
+          <div>
+            <img src="" alt="">
+            <h1></h1>
+          </div>
+        </div>
 
-    <div class="container">
+        <nav class="navbar mb-20">
 
-      <header>
-        <img class="logo" src="img/natural-logo.png" alt="logo natural">
+        </nav>
+
       </header>
+      <!-- /testata sito -->
 
-      <nav>
-        <ul>
-          <li class="menu">home</li>
-          <li class="menu">about</li>
-          <li class="menu">page template</li>
-          <li class="menu">a parent page</li>
-          <li class="menu">features</li>
-          <li class="menu">blog</li>
-          <li class="menu" id="contact">contact</li>
-        </ul>
-      </nav>
-
+      <!-- corpo del sito -->
       <main>
 
-        <div class="row-l left">
-
-          <div class="col-l">
+        <div class="col-left float-left rounded-box">
+          <div>
             <i></i>
-            <h2>Organic Themes</h2>
-            <div class="link">
-              <a href="#">Link 1</a>
-            </div>
-            <div class="link">
-              <a href="#">Link 2</a>
-            </div>
-            <div class="link">
-              <a href="#">Link 3</a>
-            </div>
-            <div class="link">
-              <a href="#">Link 4</a>
-            </div>
-            <div class="link">
-              <a href="#">Link 5</a>
-            </div>
+            <h2></h2>
           </div>
+        </div>
+
+        <div class="col-center float-left rounded-box">
 
         </div>
 
-        <div class="row-c left">
-
-          <div class="col-c">
-            <h2>Three Column</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="col-right float-left">
+          <div class="widget rounded-box">
+            <h2></h2>
+            <p></p>
           </div>
 
-        </div>
-
-        <div class="row-r right">
-
-          <div class="col-r" id="top">
-            <h3>Text Widget</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut quae odit molestiae porro at harum praesentium iure vitae incidunt quaerat?</p>
+          <div class="widget rounded-box">
+            <h2></h2>
+            <p></p>
           </div>
 
-          <div class="col-r" id="middle">
-            <h3>Text Widget</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, odio quidem maxime. Ratione tenetur, totam deserunt ea atque similique iusto?</p>
+          <div class="widget rounded-box">
+            <h2></h2>
+            <p></p>
           </div>
-
-          <div class="col-r">
-            <h3>Text Widget</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo itaque culpa hic nihil qui possimus corporis provident. Eius, repudiandae, animi?</p>
-          </div>
-
         </div>
 
       </main>
+      <!-- /corpo del sito -->
 
-      <footer>
+      <!-- chiusura del sito -->
+      <footer class="mb-20"></footer>
+      <!-- /chiusura del sito -->
 
-        <div class="footer">
-          <div class="credits">
-            <h5>Pagina realizzata da Raffaele Baldassarre</h5>
-            <hr>
-          </div>
-
-          <div class="link-social">
-            <span>Facebook</span>
-            <span>Instagram</span>
-            <span>GitHub</span>
-          </div>
-        </div>
-
-      </footer>
     </div>
 
   </body>
